--- a/src/style.css
+++ b/src/style.css
@@ -109,11 +109,11 @@ a[role='link'][data-no-underline='1']:hover {
   pointer-events: none;
 }
 .ProseMirror .mention {
-  color: rgb(65, 102, 245);
+  color: #4166f5;
 }
 .ProseMirror a,
 .ProseMirror .autolink {
-  color: rgb(65, 102, 245);
+  color: #4166f5;
 }
 /* OLLIE: TODO -- this is not accessible */
 /* Remove focus state on inputs */
