--- a/src/style.css
+++ b/src/style.css
@@ -109,11 +109,11 @@ a[role='link'][data-no-underline='1']:hover {
   pointer-events: none;
 }
 .ProseMirror .mention {
-  color: #4166f5;
+  color: #0085ff;
 }
 .ProseMirror a,
 .ProseMirror .autolink {
-  color: #4166f5;
+  color: #0085ff;
 }
 /* OLLIE: TODO -- this is not accessible */
 /* Remove focus state on inputs */
